--- a/server-core/src/main/java/io/onedev/server/web/page/project/issues/boards/issue-boards.css
+++ b/server-core/src/main/java/io/onedev/server/web/page/project/issues/boards/issue-boards.css
@@ -38,7 +38,15 @@
 	margin-left: 2rem;
 	min-width: 256px;
 }
-
+.issue-boards>.head .milestone-selector.btn-danger {
+	background-color: var(--danger) !important;
+	border-color: var(--danger) !important;
+}
+.issue-boards>.head .milestone-selector.btn-danger:hover, 
+.issue-boards>.head .milestone-selector.btn-danger:focus {
+	background-color: #EE2D41 !important;
+    border-color: #EE2D41 !important;
+}
 .floating>.content>.milestone-menu>table>tbody>tr:first-child>td {
 	border-top: none;
 }
@@ -62,3 +70,4 @@
 .board-card-detail .issue-operations .new-issue {
 	display: none;
 }
+
