--- a/server-core/src/main/java/io/onedev/server/web/page/project/pullrequests/detail/activities/pull-request-activities.css
+++ b/server-core/src/main/java/io/onedev/server/web/page/project/pullrequests/detail/activities/pull-request-activities.css
@@ -22,6 +22,13 @@
 	width: 40px;
 	height: 40px;
 }
+.pull-request-detail>.card-body>.main>.activities .activity>td.avatar .avatar.system-avatar {
+	width: 44px;
+	height: 44px;
+	margin-left: -2px;
+	opacity: 75%;
+}
+
 .pull-request-detail>.card-body>.main>.activities .activity>td.content {
 	padding-left: 1.25rem;
 }
